[project]
name = "qubik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.14",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]
license = {text = "MIT"}

[project.scripts]
qubik = "qubik.main:main"
